# hello_cmake

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  data_collector.cpp
lib/hello/: hello.cpp  hello.h
lib/world/: CMakeLists.txt  world.cpp  world.h
src/: main.cpp
